--- a/src/main/resources/views/APIMain.fxml
+++ b/src/main/resources/views/APIMain.fxml
@@ -2,19 +2,35 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@default.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="api.PrescriptionServiceAPIController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@default.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="api.PrescriptionServiceAPIController">
    <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <JFXButton fx:id="orderButton" alignment="TOP_LEFT" onAction="#orderAction" styleClass="jfx-button" text="Order Prescription">
+            <Label text="Perscription Services">
+               <font>
+                  <Font size="48.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="50.0" />
+               </VBox.margin>
+            </Label>
+            <JFXButton fx:id="orderButton" alignment="TOP_LEFT" onAction="#orderAction" styleClass="jfx-button" text="Order Prescription (Patients)">
                <padding>
                   <Insets bottom="20.0" />
                </padding>
+               <font>
+                  <Font size="24.0" />
+               </font>
             </JFXButton>
-            <JFXButton fx:id="provideButton" onAction="#provideAction" styleClass="jfx-button" text="Provide Prescription" />
+            <JFXButton fx:id="provideButton" onAction="#provideAction" styleClass="jfx-button" text="Provide Prescription (Doctors/Nurses)">
+               <font>
+                  <Font size="24.0" />
+               </font></JFXButton>
          </children>
       </VBox>
    </children>
