--- a/src/main/resources/views/APIProvide.fxml
+++ b/src/main/resources/views/APIProvide.fxml
@@ -8,8 +8,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="api.APIProvideController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="api.APIProvideController">
    <children>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       </HBox>
@@ -22,16 +23,18 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
+      </GridPane>
+      <VBox prefHeight="200.0" prefWidth="100.0">
          <children>
-            <JFXTextArea fx:id="getPatientID" prefHeight="75.0" prefWidth="100.0" promptText="Enter Patent ID" />
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+            <JFXButton fx:id="submit" onAction="#submitButtonClick" text="Submit" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <JFXButton fx:id="submit" onAction="#submitButtonClick" text="Submit" />
                   <JFXComboBox fx:id="drugName" onAction="#getDrugDesciption" />
                </children>
             </HBox>
-            <JFXTextArea fx:id="drugDescription" text="Drug description" GridPane.columnIndex="1" />
+            <JFXTextArea fx:id="drugDescription" text="Drug description" />
+            <JFXTextArea fx:id="getPatientID" prefHeight="75.0" prefWidth="100.0" promptText="Enter Patent ID" />
          </children>
-      </GridPane>
+      </VBox>
    </children>
 </AnchorPane>
