--- a/src/main/resources/views/APIOrder.fxml
+++ b/src/main/resources/views/APIOrder.fxml
@@ -10,24 +10,38 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@app.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="api.APIOrderController">
     <children>
-          <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="Order a Prescription">
-              <font>
-                  <Font size="80.0" />
-              </font>
-          </Label>
         <VBox alignment="CENTER" layoutX="140.0" layoutY="26.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="200.0">
             <children>
-            <HBox prefHeight="100.0" prefWidth="200.0">
+                <Label alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" text="Order a Prescription">
+                    <font>
+                        <Font size="80.0" />
+                    </font>
+                </Label>
+            <GridPane alignment="CENTER_LEFT" prefHeight="76.0" prefWidth="1720.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
-                  <JFXTextField fx:id="patientID" promptText="Patient ID" />
-                   <JFXComboBox promptText="Type of Drug" />
-               </children></HBox>
+                  <JFXTextField fx:id="patientID" promptText="Patient ID">
+                     <font>
+                        <Font size="36.0" />
+                     </font></JFXTextField>
+                   <JFXComboBox promptText="Type of Drug" GridPane.columnIndex="1" GridPane.valignment="CENTER" />
+               </children>
+            </GridPane>
                 <JFXTextArea fx:id="prescriptionDescription" focusColor="#b82020" promptText="Prescription Description">
                     <font>
                         <Font size="40.0" />
