--- a/src/main/resources/views/APIProvide.fxml
+++ b/src/main/resources/views/APIProvide.fxml
@@ -4,27 +4,48 @@
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@default.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="api.APIProvideController">
+<AnchorPane prefHeight="1080.0" prefWidth="1920.0" stylesheets="@default.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="api.APIProvideController">
    <children>
-      <VBox layoutX="224.0" layoutY="74.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
+      <VBox alignment="TOP_CENTER" layoutX="224.0" layoutY="74.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
          <children>
             <Label alignment="CENTER" text="Provide a Prescription" textAlignment="CENTER">
                <font>
-                  <Font size="24.0" />
+                  <Font size="80.0" />
                </font></Label>
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
-                  <JFXTextField fx:id="getPatientID" promptText="Patient ID" />
-                   <JFXComboBox fx:id="drugName" promptText="Type of Drug" />
-               </children></HBox>
-             <JFXTextArea fx:id="drugDescription" promptText="Description" />
-             <JFXButton fx:id="submit" alignment="CENTER" defaultButton="true" styleClass="btn-success" stylesheets="@app.css" text="Submit" />
+                  <JFXTextField fx:id="getPatientID" promptText="Patient ID">
+                     <font>
+                        <Font size="36.0" />
+                     </font></JFXTextField>
+                   <JFXComboBox fx:id="drugName" promptText="Type of Drug" GridPane.columnIndex="1" />
+               </children>
+            </GridPane>
+             <JFXTextArea fx:id="drugDescription" promptText="Description">
+               <font>
+                  <Font size="36.0" />
+               </font></JFXTextArea>
+             <JFXButton fx:id="submit" alignment="CENTER" defaultButton="true" stylesheets="@app.css" text="Submit">
+               <styleClass>
+                  <String fx:value="btn-lg" />
+                  <String fx:value="btn-success" />
+               </styleClass></JFXButton>
          </children>
       </VBox>
    </children>
