--- a/src/main/resources/views/APIProvide.fxml
+++ b/src/main/resources/views/APIProvide.fxml
@@ -5,6 +5,7 @@
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -13,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="1080.0" prefWidth="1920.0" stylesheets="@default.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="api.APIProvideController">
+<AnchorPane prefHeight="1080.0" prefWidth="1920.0" stylesheets="@default.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="api.APIProvideController">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="224.0" layoutY="74.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
          <children>
@@ -25,27 +26,33 @@
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <JFXTextField fx:id="getPatientID" promptText="Patient ID">
+                  <JFXTextField fx:id="getPatientID" promptText="Patient Name">
                      <font>
                         <Font size="36.0" />
                      </font></JFXTextField>
-                   <JFXComboBox fx:id="drugName" promptText="Type of Drug" GridPane.columnIndex="1" />
+                   <JFXComboBox fx:id="drugName" promptText="Select Prescription" GridPane.columnIndex="1">
+                     <padding>
+                        <Insets left="30.0" top="40.0" />
+                     </padding></JFXComboBox>
+                   <JFXButton fx:id="submit" alignment="CENTER" defaultButton="true" prefHeight="57.0" prefWidth="240.0" stylesheets="@app.css" text="Submit" GridPane.columnIndex="2">
+                     <styleClass>
+                        <String fx:value="btn" />
+                        <String fx:value="btn-success" />
+                     </styleClass>
+                  </JFXButton>
                </children>
             </GridPane>
-             <JFXTextArea fx:id="drugDescription" promptText="Description">
+            <JFXTextArea fx:id="drugInstructions" prefHeight="522.0" prefWidth="1820.0" promptText="Instructions for prescription">
                <font>
-                  <Font size="36.0" />
-               </font></JFXTextArea>
-             <JFXButton fx:id="submit" alignment="CENTER" defaultButton="true" stylesheets="@app.css" text="Submit">
-               <styleClass>
-                  <String fx:value="btn-lg" />
-                  <String fx:value="btn-success" />
-               </styleClass></JFXButton>
+                  <Font size="24.0" />
+               </font>
+            </JFXTextArea>
          </children>
       </VBox>
    </children>
