--- a/src/main/resources/views/APIMain.fxml
+++ b/src/main/resources/views/APIMain.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@default.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="TeamC.api.PrescriptionServiceAPIController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@default.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="api.PrescriptionServiceAPIController">
    <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -19,18 +19,18 @@
                   <Insets bottom="50.0" />
                </VBox.margin>
             </Label>
-            <JFXButton fx:id="orderButton" alignment="TOP_LEFT" onAction="#orderAction" styleClass="jfx-button" text="Order Prescription">
-               <padding>
-                  <Insets bottom="20.0" />
-               </padding>
+            <JFXButton fx:id="orderButton" alignment="TOP_LEFT" onAction="#orderAction" styleClass="btn-primary" stylesheets="@app.css" text="Order Prescription">
                <font>
                   <Font size="24.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="provideButton" onAction="#provideAction" styleClass="jfx-button" text="Provide Prescription">
+            <JFXButton fx:id="provideButton" onAction="#provideAction" styleClass="btn-primary" stylesheets="@app.css" text="Provide Prescription">
                <font>
                   <Font size="24.0" />
-               </font></JFXButton>
+               </font>
+               <VBox.margin>
+                  <Insets top="50.0" />
+               </VBox.margin></JFXButton>
          </children>
       </VBox>
    </children>
