--- a/src/main/resources/views/APIMain.fxml
+++ b/src/main/resources/views/APIMain.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@default.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="api.PrescriptionServiceAPIController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@default.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PrescriptionServiceAPIController">
    <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -29,8 +29,16 @@
                   <Font size="24.0" />
                </font>
                <VBox.margin>
-                  <Insets top="50.0" />
+                  <Insets top="25.0" />
                </VBox.margin></JFXButton>
+            <JFXButton fx:id="addPatient" onAction="#addPatientAction" styleClass="btn-primary" stylesheets="@appAPI.css" text="Add Patient">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="25.0" />
+               </VBox.margin>
+            </JFXButton>
          </children>
       </VBox>
    </children>
