--- a/src/main/resources/views/APIAddPatient.fxml
+++ b/src/main/resources/views/APIAddPatient.fxml
@@ -3,6 +3,8 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -79,7 +81,11 @@
             </GridPane>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Text fx:id="text" strokeType="OUTSIDE" strokeWidth="0.0" />
+                  <Label fx:id="error">
+                     <HBox.margin>
+                        <Insets right="30.0" />
+                     </HBox.margin>
+                  </Label>
                   <JFXButton fx:id="submitButton" onAction="#submitAction" styleClass="btn-primary" stylesheets="@appAPI.css" text="Submit">
                      <HBox.margin>
                         <Insets />
@@ -89,5 +95,10 @@
             </HBox>
          </children>
       </VBox>
+      <JFXButton fx:id="backButton" onAction="#backAction" styleClass="btn-danger" stylesheets="@appAPI.css" text="Back" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="40.0">
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+      </JFXButton>
    </children>
 </AnchorPane>
