--- a/src/main/resources/views/APIAddPatient.fxml
+++ b/src/main/resources/views/APIAddPatient.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.APIAddPatient">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="bu" stylesheets="@default.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.APIAddPatient">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="34.0" layoutY="42.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -42,7 +42,7 @@
                      <GridPane.margin>
                         <Insets right="10.0" />
                      </GridPane.margin></Text>
-                  <JFXTextField fx:id="patientIDText" promptText="Enter Patient's ID" GridPane.columnIndex="1" GridPane.halignment="LEFT">
+                  <JFXTextField fx:id="patientIDText" promptText="Enter Patient's ID" stylesheets="@default.css" GridPane.columnIndex="1" GridPane.halignment="LEFT">
                      <padding>
                         <Insets left="10.0" right="50.0" />
                      </padding>
@@ -59,12 +59,12 @@
                      <GridPane.margin>
                         <Insets right="10.0" />
                      </GridPane.margin></Text>
-                  <JFXTextField fx:id="patientNameText" promptText="Enter Patient's Name" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <JFXTextField fx:id="patientNameText" promptText="Enter Patient's Name" stylesheets="@default.css" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <padding>
                         <Insets left="10.0" right="50.0" />
                      </padding>
                   </JFXTextField>
-                  <JFXTextField fx:id="patientAgeText" promptText="Enter Patient's Age" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <JFXTextField fx:id="patientAgeText" promptText="Enter Patient's Age" stylesheets="@default.css" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <padding>
                         <Insets left="10.0" right="50.0" />
                      </padding>
@@ -86,7 +86,7 @@
                         <Insets right="30.0" />
                      </HBox.margin>
                   </Label>
-                  <JFXButton fx:id="submitButton" onAction="#submitAction" styleClass="btn-primary" stylesheets="@appAPI.css" text="Submit">
+                  <JFXButton fx:id="submitButton" onAction="#submitAction" styleClass="jfx-button" stylesheets="@default.css" text="Submit">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -95,7 +95,7 @@
             </HBox>
          </children>
       </VBox>
-      <JFXButton fx:id="backButton" onAction="#backAction" styleClass="btn-danger" stylesheets="@appAPI.css" text="Back" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="40.0">
+      <JFXButton fx:id="backButton" onAction="#backAction" styleClass="jfx-button" stylesheets="@default.css" text="Back" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="40.0">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor>
