--- a/src/main/resources/views/APIMain.fxml
+++ b/src/main/resources/views/APIMain.fxml
@@ -19,19 +19,19 @@
                   <Insets bottom="50.0" />
                </VBox.margin>
             </Label>
-            <JFXButton fx:id="orderButton" alignment="TOP_LEFT" onAction="#orderAction" styleClass="btn-primary" stylesheets="@appAPI.css" text="Order Prescription">
+            <JFXButton fx:id="orderButton" alignment="TOP_LEFT" onAction="#orderAction" styleClass="jfx-button" stylesheets="@default.css" text="Order Prescription">
                <font>
                   <Font size="24.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="provideButton" onAction="#provideAction" styleClass="btn-primary" stylesheets="@appAPI.css" text="Provide Prescription">
+            <JFXButton fx:id="provideButton" onAction="#provideAction" styleClass="jfx-button" stylesheets="@default.css" text="Provide Prescription">
                <font>
                   <Font size="24.0" />
                </font>
                <VBox.margin>
                   <Insets top="25.0" />
                </VBox.margin></JFXButton>
-            <JFXButton fx:id="addPatient" onAction="#addPatientAction" styleClass="btn-primary" stylesheets="@appAPI.css" text="Add Patient">
+            <JFXButton fx:id="addPatient" onAction="#addPatientAction" styleClass="jfx-button" stylesheets="@default.css" text="Add Patient">
                <font>
                   <Font size="24.0" />
                </font>
