--- a/src/main/resources/views/APIProvide.fxml
+++ b/src/main/resources/views/APIProvide.fxml
@@ -4,7 +4,6 @@
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import java.lang.String?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -32,30 +31,25 @@
                 <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <JFXTextField fx:id="getPatientID" onKeyPressed="#disableResolve" onKeyReleased="#checkPatient" promptText="Enter Patient's ID">
+                  <JFXTextField fx:id="getPatientID" onKeyPressed="#disableResolve" onKeyReleased="#checkPatient" promptText="Enter Patient's ID" styleClass="jfx-text-field" stylesheets="@default.css">
                      <font>
                         <Font size="25.0" />
                      </font></JFXTextField>
-                   <JFXComboBox fx:id="drugName" promptText="Select Prescription" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+                   <JFXComboBox fx:id="drugName" promptText="Select Prescription" styleClass="jfx-combo-box" stylesheets="@default.css" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
                </children>
             </GridPane>
-            <JFXTextArea fx:id="drugInstructions" prefHeight="522.0" prefWidth="1820.0" promptText="Instructions for prescription">
+            <JFXTextArea fx:id="drugInstructions" prefHeight="522.0" prefWidth="1820.0" promptText="Instructions for prescription" styleClass="jfx-text-area" stylesheets="@default.css">
                <font>
                   <Font size="24.0" />
                </font>
             </JFXTextArea>
          </children>
       </VBox>
-      <JFXButton fx:id="backButton" layoutY="1041.0" onAction="#backAction" styleClass="btn-danger" stylesheets="@appAPI.css" text="Back" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="40.0">
+      <JFXButton fx:id="backButton" layoutY="1041.0" onAction="#backAction" styleClass="jfx-button" stylesheets="@default.css" text="Back" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="40.0">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </JFXButton>
-      <JFXButton fx:id="resolveButton" onAction="#resolveAction" stylesheets="@appAPI.css" text="Resolve" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="50.0">
-         <styleClass>
-            <String fx:value="btn-primary" />
-            <String fx:value="btn-lg" />
-         </styleClass>
-      </JFXButton>
+      <JFXButton fx:id="resolveButton" onAction="#resolveAction" styleClass="jfx-button" stylesheets="@default.css" text="Resolve" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="50.0" />
    </children>
 </AnchorPane>
